keycloak/themes/hmda/login/resources/css/hmda.css
.usa-display,
.usa-display-alt,
h1,
h2,
h3,
h4,
h5,
h6,
.usa-font-lead {
  font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
}

.usa-grid-small {
  max-width: 450px;
}

.usa-form {
  max-width: 450px;
}

.usa-alert-heading {
  text-transform: capitalize;
}

.bg-color-hmda-gray {
  background-color: #f7f7f7;
}

.usa-header {
  background-color: #ffffff;
  border-bottom: 1px solid #d6d7d9;
}

.usa-navbar {
  height: auto;
}

.usa-nav {
  padding-top: 0;
}

.usa-nav.usa-nav-left {
  display: inline-block;
  float: none;
  padding-left: 3em;
}

.usa-logo {
  line-height: 0;
}

.usa-header-basic .usa-logo {
  bottom: 0;
  font-weight: bold;
  margin-top: 3px;
  position: relative;
}

.usa-banner-inner {
  padding-top: .25em;
  padding-bottom: .25em;
  max-width: 100%;
}

.usa-nav-container {
  padding-top: .5em;
  padding-bottom: .5em;
  max-width: 100%;
}

.usa-nav-primary>li {
  font-size: 1.3rem;
  margin-left: 0;
}

.usa-nav-primary>li.nav-institutions {
  margin-left: 3em;
}

.usa-nav-primary>li.nav-institutions>a.usa-nav-link {
  margin-left: 0;
}

.usa-nav-primary>li>a {
  color: #212121;
  font-size: 1.3rem;
  margin: 1.3rem 1.5rem 1rem;
  padding: 0;
  text-transform: uppercase;
}

.usa-nav-primary>li>a.active {
  border-bottom: 2px solid;
}

.usa-nav-primary>li>a.usa-button {
  color: #ffffff;
  margin: 0;
  padding: 1rem 2rem;
  text-transform: uppercase;
}

.usa-nav-primary>li>a.usa-button:hover {
  color: #ffffff;
  background-color: #205493;
}

.usa-nav-primary>li>a.usa-button.usa-button-outline:hover {
  color: #ffffff
}

.usa-nav-primary>li>a:last-child>a {
  margin-right: 0;
}

.usa-nav-primary>li>a:first-child>a {
  margin-left: 0;
}

.usa-nav-primary a {
  padding: 0;
  display: inline-block;
}


html {
  position: relative;
  min-height: 100%;
}

body {
  margin: 0 0 120px;
}

.usa-footer {
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
}

.usa-alert {
  width: 100%;
}

.usa-alert-error,
.usa-alert-warning {
  background-image: none;
}

.usa-alert-body {
  padding-left: 0;
}

.usa-alert p {
  margin: 0;
}

.usa-alert li[data-validator] {
  margin-bottom: 0;
}

.padding-1 {
  padding: 1em;
}

.margin-bottom-1 {
  margin-bottom: 3em;
}

.margin-top-0 {
  margin-top: 0;
}

.usa-unstyled-list label {
  margin: .2em;
}

fieldset fieldset legend {
  font-size: 1.7rem;
  font-weight: normal;
}

#institutions dl {
  margin-top: 0;
  margin-left: 2.3em;
}

#institutions dd,
#institutions dt {
  display: inline;
}

#institutions dt {
  font-weight: 700;
}

#institutions dd {
  margin-left: .5em;
}

#institutions dd:after {
  content: '\A';
  white-space: pre-wrap;
}

.usa-input-help-message {
  color: inherit;
  display: block;
  font-size: 1.7rem;
  font-weight: 700;
  padding-top: 3px;
  padding-bottom: 3px;
}

